# ansible-collection-postgresql

./: .ansible-lint.yml  .gitignore  .talismanrc  .yamllint  Makefile  README.md  galaxy.yml  pyproject.toml  requirements.yml  roles.yml
.github/workflows/: libvirt.yml  lint.yml  molecule.yml  release.yml  version.yml
molecule/barman/: molecule.yml
molecule/common/: barman.yml  cleanup.yml  crash.yml  create.yml  databases.yml  destroy.yml  install.yml  pagila.yml  prepare.yml  update.yml  verify.yml
molecule/common/templates/: vm.j2.xml
molecule/databases/: molecule.yml
molecule/install/: molecule.yml  side_effect.yml
molecule/update/: molecule.yml
playbooks/: barman.yml  cluster.yml  consul.yml  databases.yml  extension.yml  facts.yml  haproxy.yml  install.yml  members.yml  patroni.yml  paudit.yml  pgaudit.yml  postgresql.yml  prepare.yml  update.yml
playbooks/templates/: barman.cluster.conf.j2  barman.conf.j2  barman.main.conf.j2  haproxy.conf.j2  patroni.yml.j2  pgpass.j2  postgresql.conf.j2
playbooks/vars/: main.yml
roles/: .gitignore
