[tool.poetry]
name = "nephelaiio-patroni"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.2.0", markers = "platform_system != 'Windows'" }
ansible = "^9.3.0"
molecule = "^24.2.0"
molecule-plugins = {extras = ["docker"], version = "^23.5.3"}
yamllint = "^1.32.0"
netaddr = "^0.9.0"
lxml = "^5.1.0"
libvirt-python = "^10.1.0"
github3-py = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
