[tool.poetry]
name = "nephelaiio-patroni"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ansible = "^11.2.0"
ansible-lint = "^25.1.1"
molecule = "^25.2.0"
molecule-plugins = {extras = ["docker"], version = "^23.7.0"}
netaddr = "^1.3.0"
yamllint = "^1.35.1"
lxml = "^5.3.0"
libvirt-python = "^11.0.0"
passlib = "^1.7.4"
github3-py = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
